--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Welcome to My website</h1>
         <h2>This is Ermias</h2>
-        Hello, Git!
+        Hello, Github!
+        <h3>Github Tutorial</h3>
     </body>
 </html>
