--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to My website!!</h1>
-=======
-        <h1 style="color:blue">Welcome to My website</h1>
->>>>>>> cf613f4ad427065fc2889dac32eb5cfd5765e31f
+        <h1 style="color:blue">Welcome to My website!!</h1>
         <h2>This is Ermias</h2>
         Hello, Github!
         <h3>Github Tutorial</h3>
